# claude-python-skill

./: .gitignore  CLAUDE.md  README.md  SKILL.md
.claude/: settings.json
.claude-plugin/: plugin.json
assets/snippets/: api.py  orm.py
assets/templates/: .pre-commit-config.yaml  grant_python_heredoc.py  init_remote_env.sh  python_build.yml  ruff_on_save.py  settings.json  vscode-settings.json
references/: dependencies.md  packaging.md  tool-config.md
skills/pytest/: SKILL.md
skills/quality/: SKILL.md
skills/scaffold/: SKILL.md
skills/scaffold/assets/snippets/: api.py  cli.py
skills/scaffold/assets/templates/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  init_remote_env.sh  pyproject.toml  ruff_on_save.py  settings.json
skills/scaffold/references/: dependencies.md
