[project]
name = "{project_name}"
description = "{description}"
requires-python = "{python version}"
dependencies = [
]


[dependency-groups]
dev = [
    "pytest >= 8.3.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14",
    "pytest-cov >= 6.1",
    "pytest-profiling>=1.8.1",
    "pytest-playwright >= 0.6.2",
    "pre-commit >= 4.0.1",
    "ruff>=0.14.10",
    "ty>=0.0.14",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "deptry>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{project_name}"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
env_files = [".env"]
timeout = 180
timeout_method = "signal"
asyncio_default_fixture_loop_scope="function"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
]

# see ruff configuration options at
# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 92
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "A",
    "B",
    "S",
    "UP",
] # Enable checks for PEP8, imports, bugbear, security, and pyupgrade rules
ignore = ["E203", "E266", "S101"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ty]

[tool.ty.src]
include = [
    "{project_name}",
    "scripts",
    "tests"
]

[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-missing-import = "error"
redundant-cast = "ignore"
unresolved-import = "error"
